--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
 		<div class="class_4" >
 			<h1 class="class_5"  >
 				MY DRIVE
-				<br>
-				<i class="bi bi-cloud-arrow-up-fill class_6">
-				</i>
+				<i class="bi bi-cloud-arrow-up-fill class_6"></i>
 			</h1>
 		</div>
 		<div class="class_7" >
 			<img src="assets/images/beautiful-sincere-happy-girl-smiling-laughing_176420-9693.jpg" class="class_8" >
 			<div class="class_9"  >
 				Hi User
-				<br>
 			</div>
 		</div>
 	</div>
@@ -38,7 +35,6 @@
 			<div class="class_13" >
 				<div class="class_9"  >
 					Drive Space
-					<br>
 				</div>
 				<div class="class_14" >
 					<div class="class_15" >
@@ -46,39 +42,34 @@
 				</div>
 				<div class="class_9"  >
 					8Gb / 10Gb
-					<br>
 				</div>
 			</div>
-			<div class="class_16" >
+			<div id="MYDRIVE" onclick="mode.set(this.id)" class="class_16" >
 				<i class="bi bi-cloud-arrow-up-fill class_17">
 				</i>
 				<div class="class_9"  >
 					My Drive
-					<br>
 				</div>
 			</div>
-			<div class="class_18" >
+			<div id="FAVORITES" onclick="mode.set(this.id)" class="class_18" >
 				<i class="bi bi-star-fill class_17">
 				</i>
 				<div class="class_9"  >
 					Favorites
-					<br>
 				</div>
 			</div>
-			<div class="class_18" >
+			<div id="RECENT" onclick="mode.set(this.id)" class="class_18" >
 				<i class="bi bi-alarm-fill class_17">
 				</i>
 				<div class="class_9"  >
 					Recent
-					<br>
 				</div>
 			</div>
-			<div class="class_18" >
+			<div id="TRASH" onclick="mode.set(this.id)" class="class_18" >
 				<i class="bi bi-trash3-fill class_17">
 				</i>
 				<div class="class_9"  >
 					Trash
-					<br>
 				</div>
 			</div>
 		</div>
@@ -360,10 +351,18 @@
 
 <script>
 
-	const mode = {
+	let mode = {
+		current : 'MYDRIVE',
 
-		current: 'MYDRIVE',
-		
+		set : (m)=>{
+			mode.current = m;
+			let selected = document.querySelector('.class_16');
+			selected.classList.remove('class_16');
+			selected.classList.add('class_18');
+			let new_selected = document.getElementById(m);
+			new_selected.classList.remove('class_18');
+			new_selected.classList.add('class_16');
+		}
 	};
 
 	const submenu = {
