--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 								File Name
 							</th>
 							<th scope="col">
+								
+							</th>
+							<th scope="col">
 								Type
 							</th>
 							<th scope="col">
@@ -238,59 +241,51 @@
 			</h1>
 			<div class="class_28">
 			</div>
-			<div class="class_49">
+			<div class="js-file-info hide class_49">
 				<table class="item_class_2 class_50">
 
 					<tbody>
-						
 						<tr>
-
 							<th>
 								File:
 							</th>
-
-							<td>
-								My Text.txt
-								<br>
+							<td id="file">
 							</td>
-
 						</tr>
-
 						<tr>
+							<th>
+								Type:
+							</th>
 
+							<td id="type">
+							</td>
+						</tr>
+						<tr>
 							<th>
 								Size:
 							</th>
 
-							<td>
-								234kb
-								<br>
+							<td id="size">
 							</td>
-
 						</tr>
-
 						<tr>
 							<th>
 								Date Added:
 							</th>
-							<td>
-								12th jan 2023
-								<br>
+							<td id="dateAdded">
 							</td>
 						</tr>
 						<tr>
 							<th>
 								Date Modified:
 							</th>
-							<td>
-								20th Jun 2023
-								<br>
+							<td id="dateModified">
 							</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
-			<div class="class_51">
+			<div class="js-info-no-file class_51">
 				<i class="bi bi-info-circle-fill class_17">
 				</i>
 				<div class="class_9">
@@ -371,6 +366,10 @@
 </html>
 
 <script>
+
+	let ROWS = [];
+	let LOGGED_IN = false;
+
 	let mode = {
 		current: 'MY DRIVE',
 
@@ -383,6 +382,8 @@
 			let new_selected = document.getElementById(m);
 			new_selected.classList.remove('class_18');
 			new_selected.classList.add('class_16');
+
+			table.refresh(mode.current);
 		}
 	};
 
@@ -404,10 +405,14 @@
 	const table = {
 
 		selected: null,
+		selected_id: null,
 
 		select: (e) => {
 
+			let old_selected_id = table.selected_id;
 			table.selected = null;
+			table.selected_id = null;
+
 			let tbody = document.getElementById('table-body');
 			for (let i = 0; i < tbody.children.length; i++) {
 				tbody.children[i].classList.remove('class_38');
@@ -420,16 +425,37 @@
 				item = item.parentNode;
 			}
 
-			if (item.tagName == 'TR')
-				table.selected = item;
-			table.selected.classList.add('class_38');
+			if (item.tagName == 'TR'){
+				if(old_selected_id == null || item.getAttribute('id') !== old_selected_id){
+					table.selected = item;
+					table.selected_id = item.getAttribute('id');
+					table.selected.classList.add('class_38');
+
+					fileInfo.show(item.getAttribute('id').replace("tr_",""));
+				}else{
+					fileInfo.hide();
+				}
+			}
 		},
 
-		refresh: (data)=>{
+		refresh: (MODE = 'MY DRIVE') => {
+
+			//show a loader
+			let tbody = document.querySelector('#table-body');
+			tbody.innerHTML = `
+			<tr>
+				<td colspan = '10' style='text-align:center;padding:10px'>
+					<img src="./assets/images/loader.gif" style='width:100px;height:100px'>
+				</td>
+			</tr>`;
+
+			//hide file info
+			fileInfo.hide();
 
 			let myForm = new FormData();
 
-			myForm.append('data_type','get_files');
+			myForm.append('data_type', 'get_files');
+			myForm.append('mode', MODE);
 
 			let xhr = new XMLHttpRequest();
 
@@ -439,30 +465,41 @@
 
 						let tbody = document.querySelector('#table-body');
 						tbody.innerHTML = "";
+						console.log(xhr.responseText);
 
 						let obj = JSON.parse(xhr.responseText);
 
-						if(obj.succes && obj.data_type == "get_files"){
+						if (obj.succes && obj.data_type == "get_files") {
 
+							ROWS = obj.rows;
 							for (let i = 0; i < obj.rows.length; i++) {
 
 								let tr = document.createElement('tr');
+								tr.setAttribute('id', 'tr_'+i);
+
+								// set favorite star
+								let star = '<i class="bi bi-star class_34">';
+								if(obj.rows[i].favorite == 1)
+									star = '<i class="bi bi-star-fill class_34">'
+	
 								tr.innerHTML = `
-									<td>icon</td>
-									<td>${obj.rows[i].file_name}</td>
+									<td>${obj.rows[i].icon}</td>
+									<td style="max-width:200px">${obj.rows[i].file_name}</td>
+									<td>${star}</td>
 									<td>${obj.rows[i].file_type}</td>
 									<td>${obj.rows[i].date_created}</td>
 									<td>${obj.rows[i].date_updated}</td>
 									<td>${obj.rows[i].file_size}</td>
-									<td></td>
+									<td><i class="bi bi-cloud-download-fill class_34"></i></td>
 								`;
 								tbody.appendChild(tr);
 							}
 
 						} else {
-							tbody.innerHTML = "<tr><td colspan = '10' style ='text-align:center'>No files found!</td></tr>";
+							tbody.innerHTML =
+								"<tr><td colspan = '10' style ='text-align:center'>No files found!</td></tr>";
 						}
-					}else
+					} else
 						console.log(xhr.responseText);
 				}
 			});
@@ -470,7 +507,7 @@
 			xhr.open('post', 'api.php', true);
 			xhr.send(myForm);
 			//recreate table
-			
+
 		}
 	};
 
@@ -497,7 +534,7 @@
 			upload.cancelled = false;
 			let myForm = new FormData();
 
-			myForm.append('data_type','upload_files');
+			myForm.append('data_type', 'upload_files');
 
 			for (let i = 0; i < files.length; i++) {
 				myForm.append('file' + i, files[i]);
@@ -529,9 +566,10 @@
 					if (xhr.status == 200) {
 						upload.resetProgress();
 						let obj = JSON.parse(xhr.responseText);
-						if(obj.succes){
+						if (obj.succes) {
 							alert("Upload complete!");
-						}else{
+							table.refresh();
+						} else {
 							alert("Could not complete file upload!");
 						}
 						upload.resetProgress();
@@ -566,6 +604,27 @@
 			removeHighlight: () => {
 				document.querySelector('.drop-zone').classList.remove('drop-zone-highlight');
 			}
+		}
+	};
+
+	let fileInfo = {
+
+		show: (id)=>{
+
+			let row = ROWS[id];
+			document.querySelector('.js-info-no-file').classList.add('hide');
+			let fileInfoPanel = document.querySelector('.js-file-info');
+			fileInfoPanel.classList.remove('hide');
+			fileInfoPanel.querySelector('#file').innerHTML = row.file_name;
+			fileInfoPanel.querySelector('#size').innerHTML = row.file_size;
+			fileInfoPanel.querySelector('#type').innerHTML = row.file_type;
+			fileInfoPanel.querySelector('#dateModified').innerHTML = row.date_updated;
+			fileInfoPanel.querySelector('#dateAdded').innerHTML = row.date_created;
+		},
+
+		hide: ()=>{
+			document.querySelector('.js-info-no-file').classList.remove('hide');
+			document.querySelector('.js-file-info').classList.add('hide');
 		}
 	};
 
