--- a/signup.html
+++ b/signup.html
@@ -1,50 +1,117 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>my drive signup page</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-icons.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets_signup/css/bootstrap-icons.css">
+	<link rel="stylesheet" type="text/css" href="assets_signup/css/styles.css">
 </head>
-<body>
 
-	
-	<section class="class_1" >
-		<form method="post" enctype="multipart/form-data" class="class_2" >
-			<h1 class="class_3"  >
+<body>
+	<section class="class_1">
+		<form onsubmit="signup.submit()" method="post" enctype="multipart/form-data" class="class_2">
+			<h1 class="class_3">
 				MY DRIVE
 				<br>
 			</h1>
-			<img src="assets/images/woman-coming-other-woman-with-ideas-project_74855-11211.jpg" class="class_4" >
-			<h1 class="class_5"  >
+			<img src="assets_signup/images/woman-coming-other-woman-with-ideas-project_74855-11211.jpg" class="class_4">
+			<h1 class="class_5">
 				SIGNUP
 			</h1>
-			<div class="class_6" >
-				<div class="class_7" >
-					<label class="class_8"  >
+			<div class="js-error-banner hide"
+				style="background-color: #ffb7b7; color: #7b0000 ; padding: 10px;text-align: center ;">
+				Please fix the errors below!
+			</div>
+			<div class="class_6">
+				<div class="class_7">
+					<label class="class_8">
 						USERNAME
 					</label>
-					<input placeholder="Enter a Username" type="text" name="username" class="class_9" >
+					<input placeholder="Enter a Username" type="text" name="username" class="class_9">
 				</div>
-				<div class="class_7" >
-					<label class="class_8"  >
+				<small class="error-username hide" style="color: red;display: block;"></small>
+				<div class="class_7">
+					<label class="class_8">
 						EMAIL
 					</label>
-					<input placeholder="Enter a valid Email" type="email" name="email" class="class_10" >
+					<input placeholder="Enter a valid Email" type="email" name="email" class="class_10">
 				</div>
-				<div class="class_7" >
-					<label class="class_8"  >
+				<small class="error-email hide" style="color: red;display: block;"></small>
+				<div class="class_7">
+					<label class="class_8">
 						PASSWORD
 					</label>
-					<input placeholder="Enter a password" type="text" name="password" class="class_9" >
+					<input placeholder="Enter a password" type="text" name="password" class="class_9">
+				</div>
+				<small class="error-password hide" style="color: red;display: block;"></small>
+				<div class="class_7">
+					<label class="class_8">
+						RETYPE PASSWORD
+					</label>
+					<input placeholder="Retype password" type="text" name="retype-password" class="class_9">
 				</div>
 			</div>
-			<button class="class_11"  >
+			<div style="padding: 10px;text-align: center ;">
+				Already have an account? <a href="login.html">Log in here</a>
+			</div>
+			<button class="js-signup-button class_11">
 				SIGNUP
 			</button>
 		</form>
 	</section>
-	
+
 </body>
+
 </html>
+
+<script>
+	const signup = {
+
+		uploading: false,
+
+		submit: () => {
+
+			if (signup.uploading)
+				alert("Please wait");
+
+			let button = document.querySelector('js-signup-button');
+			button.innerHTML = `Saving...`;
+
+			let myForm = new FormData();
+
+			myForm.append('data_type', 'user_signup');
+
+			signup.uploading = true;
+			let xhr = new XMLHttpRequest();
+
+			xhr.addEventListener('readystatechange', () => {
+				if (xhr.readyState == 4) {
+					signup.uploading = false;
+					button.innerHTML = "SIGNUP";
+					if (xhr.status == 200) {
+						console.log(xhr.responseText);
+
+						let obj = JSON.parse(xhr.responseText);
+
+						if (obj.succes && obj.data_type == "user_sigup") {
+
+							alert("Your account was created!");
+							window.location.href = 'index.html';
+
+						} else {
+							alert("An error occured!");
+						}
+					} else
+						console.log(xhr.responseText);
+				}
+			});
+
+			xhr.open('post', 'api.php', true);
+			xhr.send(myForm);
+			//recreate signup
+
+		}
+	};
+</script>
