--- a/signup.html
+++ b/signup.html
@@ -11,10 +11,9 @@
 
 <body>
 	<section class="class_1">
-		<form onsubmit="signup.submit()" method="post" enctype="multipart/form-data" class="class_2">
+		<form onsubmit="signup.submit(event)" method="post" enctype="multipart/form-data" class="class_2">
 			<h1 class="class_3">
 				MY DRIVE
-				<br>
 			</h1>
 			<img src="assets_signup/images/woman-coming-other-woman-with-ideas-project_74855-11211.jpg" class="class_4">
 			<h1 class="class_5">
@@ -31,21 +30,21 @@
 					</label>
 					<input placeholder="Enter a Username" type="text" name="username" class="class_9">
 				</div>
-				<small class="error-username hide" style="color: red;display: block;"></small>
+				<small class="error error-username hide" style="color: red;display: block;"></small>
 				<div class="class_7">
 					<label class="class_8">
 						EMAIL
 					</label>
 					<input placeholder="Enter a valid Email" type="email" name="email" class="class_10">
 				</div>
-				<small class="error-email hide" style="color: red;display: block;"></small>
+				<small class="error error-email hide" style="color: red;display: block;"></small>
 				<div class="class_7">
 					<label class="class_8">
 						PASSWORD
 					</label>
 					<input placeholder="Enter a password" type="text" name="password" class="class_9">
 				</div>
-				<small class="error-password hide" style="color: red;display: block;"></small>
+				<small class="error error-password hide" style="color: red;display: block;"></small>
 				<div class="class_7">
 					<label class="class_8">
 						RETYPE PASSWORD
@@ -71,17 +70,25 @@
 
 		uploading: false,
 
-		submit: () => {
+		submit: (e) => {
+
+			e.preventDefault();
 
 			if (signup.uploading)
 				alert("Please wait");
 
-			let button = document.querySelector('js-signup-button');
+			let button = document.querySelector('.js-signup-button');
 			button.innerHTML = `Saving...`;
 
 			let myForm = new FormData();
 
 			myForm.append('data_type', 'user_signup');
+
+			let inputs = e.currentTarget.querySelectorAll("input,select,textarea");
+			for (let i = 0; i < inputs.length; i++) {
+				myForm.append(inputs[i].name, inputs[i].value.trim());
+			}
+			console.log(myForm);
 
 			signup.uploading = true;
 			let xhr = new XMLHttpRequest();
@@ -95,13 +102,26 @@
 
 						let obj = JSON.parse(xhr.responseText);
 
-						if (obj.succes && obj.data_type == "user_sigup") {
-
-							alert("Your account was created!");
+						if (obj.succes && obj.data_type == "user_signup") {
+							alert("Your account was created! Please login to continue!");
 							window.location.href = 'index.html';
 
 						} else {
-							alert("An error occured!");
+							//errors
+							let form = document.querySelector("form");
+							
+							//clear old error
+							let errors = document.querySelectorAll(".error");
+							errors.forEach(error => {
+								error.innerHTML = "";
+								error.classList.add("hide");
+							});
+							//show new errors
+							for(key in obj.errors){
+								let item = document.querySelector(".error-"+key);
+								item.innerHTML = obj.errors[key];
+								item.classList.remove("hide");
+							}
 						}
 					} else
 						console.log(xhr.responseText);
