--- a/login.html
+++ b/login.html
@@ -2,49 +2,124 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>my drive signup page</title>
-    <link rel="stylesheet" type="text/css" href="assets_signup/css/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="assets_signup/css/styles.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>my drive login page</title>
+	<link rel="stylesheet" type="text/css" href="assets_signup/css/bootstrap-icons.css">
+	<link rel="stylesheet" type="text/css" href="assets_signup/css/styles.css">
 </head>
 
 <body>
-
-
-    <section class="class_1">
-        <form method="post" enctype="multipart/form-data" class="class_2">
-            <h1 class="class_3">
-                MY DRIVE
-                <br>
-            </h1>
-            <img src="assets_signup/images/woman-coming-other-woman-with-ideas-project_74855-11211.jpg" class="class_4">
-            <h1 class="class_5">
-                LOGIN
-            </h1>
-            <div class="class_6">
-                <div class="class_7">
-                    <label class="class_8">
-                        EMAIL
-                    </label>
-                    <input placeholder="Enter a valid Email" type="email" name="email" class="class_10">
-                </div>
-                <div class="class_7">
-                    <label class="class_8">
-                        PASSWORD
-                    </label>
-                    <input placeholder="Enter a password" type="text" name="password" class="class_9">
-                </div>
-            </div>
-            <div style="padding: 10px;text-align: center ;">
-                Don't have an account? <a href="signup.html">Sign up here</a>
-            </div>
-            <button class="class_11">
-                SIGNUP
-            </button>
-        </form>
-    </section>
+	<section class="class_1">
+		<form onsubmit="login.submit(event)" method="post" enctype="multipart/form-data" class="class_2">
+			<h1 class="class_3">
+				MY DRIVE
+			</h1>
+			<img src="assets_signup/images/woman-coming-other-woman-with-ideas-project_74855-11211.jpg" class="class_4">
+			<h1 class="class_5">
+				LOGIN
+			</h1>
+			<div class="js-error-banner hide"
+				style="background-color: #ffb7b7; color: #7b0000 ; padding: 10px;text-align: center ;">
+				Please fix the errors below!
+			</div>
+			<div class="class_6">
+				<div class="class_7">
+					<label class="class_8">
+						EMAIL
+					</label>
+					<input placeholder="Enter a valid Email" type="email" name="email" class="class_10">
+				</div>
+				<small class="error error-email hide" style="color: red;display: block;"></small>
+				<div class="class_7">
+					<label class="class_8">
+						PASSWORD
+					</label>
+					<input placeholder="Enter a password" type="password" name="password" class="class_9">
+				</div>
+				<small class="error error-password hide" style="color: red;display: block;"></small>
+			</div>
+			<div style="padding: 10px;text-align: center ;">
+				Don't have an account? <a href="signup.html">Sign up here</a>
+			</div>
+			<button class="js-login-button class_11">
+				LOGIN
+			</button>
+		</form>
+	</section>
 
 </body>
 
 </html>
+
+<script>
+	const login = {
+
+		uploading: false,
+
+		submit: (e) => {
+
+			e.preventDefault();
+
+			if (login.uploading)
+				alert("Please wait");
+
+			let button = document.querySelector('.js-login-button');
+			button.innerHTML = `Logging in...`;
+
+			let myForm = new FormData();
+
+			myForm.append('data_type', 'user_login');
+
+			let inputs = e.currentTarget.querySelectorAll("input,select,textarea");
+			for (let i = 0; i < inputs.length; i++) {
+				myForm.append(inputs[i].name, inputs[i].value.trim());
+			}
+			console.log(myForm);
+
+			login.uploading = true;
+			let xhr = new XMLHttpRequest();
+
+			xhr.addEventListener('readystatechange', () => {
+				if (xhr.readyState == 4) {
+					login.uploading = false;
+					button.innerHTML = "login";
+					if (xhr.status == 200) {
+						console.log(xhr.responseText);
+
+						let obj = JSON.parse(xhr.responseText);
+
+						if (obj.succes && obj.data_type == "user_login") {
+							alert("Login succeful");
+							window.location.href = 'index.html';
+
+						} else {
+							//errors
+							let form = document.querySelector("form");
+
+							//clear old error
+							let errors = document.querySelectorAll(".error");
+							document.querySelector(".js-error-banner").classList.remove("hide");
+							errors.forEach(error => {
+								error.innerHTML = "";
+								error.classList.add("hide");
+							});
+							//show new errors
+							for (key in obj.errors) {
+								let item = document.querySelector(".error-" + key);
+								item.innerHTML = obj.errors[key];
+								item.classList.remove("hide");
+							}
+						}
+					} else
+						console.log(xhr.responseText);
+				}
+			});
+
+			xhr.open('post', 'api.php', true);
+			xhr.send(myForm);
+			//recreate signup
+
+		}
+	};
+</script>
