file download feature

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <!--modals-->
         <!--sub menu-->
         <div id="submenu" class="class_45 hide" style="position: absolute">
-            <div class="class_46">
+            <div onclick="table.downloadFile()" class="class_46">
                 <i class="bi bi-cloud-download-fill class_17"> </i>
                 <div class="class_9">Download</div>
             </div>
