--- a/index.html
+++ b/index.html
@@ -69,17 +69,7 @@
                 </div>
             </div>
             <div class="class_22">
-                <div id="breadcrumbs" class="class_23">
-                    <div onclick="table.changeFolderById(0)" class="class_24">
-                        My Drive
-                    </div>
-                    <!--<div class="class_25">
-						My First Folder
-					</div>
-					<div class="class_26">
-						My Second Folder
-					</div>-->
-                </div>
+                <div id="breadcrumbs" class="class_23"></div>
                 <h1 class="js-mode-title class_27">MY DRIVE</h1>
                 <div class="class_28">
                     <table
@@ -92,7 +82,7 @@
                                 <th scope="col">File Name</th>
                                 <th scope="col"></th>
                                 <th scope="col">Type</th>
-                                <th scope="col">Created</th>
+                                <th scope="col">Shared</th>
                                 <th scope="col">Updated</th>
                                 <th scope="col">Size</th>
                                 <th scope="col">Action</th>
@@ -182,7 +172,17 @@
         <!--modals-->
         <!--sub menu-->
         <div id="submenu" class="class_45 hide" style="position: absolute">
-            <div id="submenu-download" onclick="table.downloadFile()" class="class_46">
+            <div
+                id="submenu-preview"
+                onclick="table.previewFile()"
+                class="class_46">
+                <i class="bi bi-eye class_17"> </i>
+                <div class="class_9">Preview</div>
+            </div>
+            <div
+                id="submenu-download"
+                onclick="table.downloadFile()"
+                class="class_46">
                 <i class="bi bi-cloud-download-fill class_17"> </i>
                 <div class="class_9">Download</div>
             </div>
@@ -194,19 +194,30 @@
                 <i class="bi bi-folder-x class_17"> </i>
                 <div class="class_9">Move</div>
             </div>
-            <div id="submenu-delete" onclick="table.deleteRow()" class="class_46">
+            <div
+                id="submenu-delete"
+                onclick="table.deleteRow()"
+                class="class_46">
                 <i class="bi bi-trash3-fill class_17"> </i>
                 <div class="class_9">Delete</div>
+            </div>
+            <div
+                id="submenu-restore"
+                onclick="table.restoreRow()"
+                class="class_46">
+                <i class="bi bi-arrow-counterclockwise class_17"> </i>
+                <div class="class_9">Restore</div>
             </div>
             <div id="submenu-share" class="class_46">
                 <i class="bi bi-share-fill class_17"> </i>
                 <div class="class_9">Share</div>
             </div>
-            <div id="submenu-favorite" onclick="table.addToFavorite()" class="class_46">
+            <div
+                id="submenu-favorite"
+                onclick="table.addToFavorite()"
+                class="class_46">
                 <i class="bi bi-star-fill class_17"> </i>
-                <div class="js-favorite-text class_9">
-                    Add to favorites
-                </div>
+                <div class="js-favorite-text class_9">Add to favorites</div>
             </div>
         </div>
         <!-- end sub menu-->
@@ -227,4 +238,4 @@
     </body>
 </html>
 
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
